--- a/package.json
+++ b/package.json
@@ -1,41 +1,51 @@
-{
-  "name": "billing-reports",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/material": "^6.0.1",
-    "autoprefixer": "^10.4.20",
-    "axios": "^1.7.4",
-    "billing-reports": "file:",
-    "bootstrap": "5.2",
-    "boxicons": "^2.1.4",
-    "cors": "^2.8.5",
-    "postcss": "^8.4.41",
-    "react": "^18.3.1",
-    "react-bootstrap": "^2.10.4",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1",
-    "tailwindcss": "^3.4.10"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.9.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^9.9.0",
-    "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "vite": "^5.4.1"
+  {
+    "name": "billing-reports",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+      "scripts": {
+      "dev": "vite",
+      "build": "vite build",
+      "lint": "eslint .",
+      "preview": "vite preview"
+    },
+    "dependencies": {
+      "@emotion/react": "^11.13.3",
+      "@emotion/styled": "^11.13.0",
+      "@fortawesome/fontawesome-svg-core": "^6.6.0",
+      "@fortawesome/free-solid-svg-icons": "^6.6.0",
+      "@fortawesome/react-fontawesome": "^0.2.2",
+      "@mui/icons-material": "^6.1.0",
+      "@mui/material": "^6.0.1",
+      "@reduxjs/toolkit": "^2.2.7",
+      "axios": "^1.7.4",
+      "billing-reports": "file:",
+      "bootstrap": "5.2",
+      "boxicons": "^2.1.4",
+      "cors": "^2.8.5",
+      "primereact": "^10.8.3",
+      "react": "^18.3.1",
+      "react-bootstrap": "^2.10.4",
+      "react-dom": "^18.3.1",
+      "react-icons": "^5.3.0",
+      "react-redux": "^9.1.2",
+      "react-router-dom": "^6.26.1",
+      "react-toastify": "^10.0.5",
+      "reacticons": "^0.0.1"
+    },
+    "devDependencies": {
+      "@eslint/js": "^9.9.0",
+      "@types/react": "^18.3.3",
+      "@types/react-dom": "^18.3.0",
+      "@vitejs/plugin-react": "^4.3.1",
+      "autoprefixer": "^10.4.20",
+      "eslint": "^9.9.0",
+      "eslint-plugin-react": "^7.35.0",
+      "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+      "eslint-plugin-react-refresh": "^0.4.9",
+      "globals": "^15.9.0",
+      "postcss": "^8.4.47",
+      "tailwindcss": "^3.4.11",
+      "vite": "^5.4.1"
+    }
   }
-}
