--- a/package.json
+++ b/package.json
@@ -12,30 +12,43 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^6.0.1",
     "@mui/material": "^6.0.1",
-    "autoprefixer": "^10.4.20",
+    "@mui/x-data-grid": "^7.15.0",
     "axios": "^1.7.4",
     "billing-reports": "file:",
     "bootstrap": "5.2",
+    "bootstrap-icons": "^1.11.3",
     "boxicons": "^2.1.4",
     "cors": "^2.8.5",
-    "postcss": "^8.4.41",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.8.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.1",
-    "tailwindcss": "^3.4.10"
+    "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.28.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "postcss": "^8.4.44",
+    "tailwindcss": "^3.4.10",
     "vite": "^5.4.1"
   }
 }
